# green-gpu-exp

./: CMakeLists.txt  LICENSE
include/: mem_manager.hpp
src/: CMakeLists.txt  gw_gpu_kernel.cpp  mem_manager.cpp  task.cpp
src/green/gpu/: gpu_kernel.h  gw_gpu_kernel.h
test/: CMakeLists.txt  test_distributed.cpp  test_main.cpp  test_mem_manager.cpp  test_mpi.cpp
